@@ -86,4 +86,25 @@ public class GzipTest extends BuildFileTest {
         expectBuildException("test4", "attribute zipfile invalid");
     }
 
+    public void testGZip(){
+        executeTarget("realTest");
+        String log = getLog();
+        assertTrue("Expecting message starting with 'Building:' but got '"
+            + log + "'", log.startsWith("Building:"));
+        assertTrue("Expecting message ending with 'asf-logo.gif.gz' but got '"
+            + log + "'", log.endsWith("asf-logo.gif.gz"));
+    }
+
+    public void testDateCheck(){
+        executeTarget("testDateCheck");
+        String log = getLog();
+        assertTrue(
+            "Expecting message ending with 'asf-logo.gif.gz is up to date.' but got '" + log + "'",
+            log.endsWith("asf-logo.gif.gz is up to date."));
+    }
+
+    public void tearDown(){
+        executeTarget("cleanup");
+    }
+
 }
